--- a/debian.binary/control.template
+++ b/debian.binary/control.template
@@ -11,10 +11,8 @@ Provides: nvidia-kernel-#VERSION#
 Depends: nvidia-kernel-common (>= 20050829)
 Recommends: linux-image-#KVERS#
 Description: NVIDIA binary kernel module for Linux #KVERS#
- These XFree86 4.0 binary drivers provide optimized hardware acceleration of 
- OpenGL applications via a direct-rendering X Server and support the 
- GeForce (>2), nForce and Quadro chipsets. AGP and flat panel
- displays are also supported.
+ These Xorg binary drivers provide optimized hardware acceleration of 
+ OpenGL applications via a direct-rendering X Server. 
  .
  This package contains the NVIDIA binary kernel module needed by
  nvidia-glx.
