--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,17 @@
 Source: nvidia-graphics-drivers
 Section: non-free/x11
 Priority: optional
-Maintainer: Debian NVIDIA Maintainers <pkg-nvidia-devel@lists.alioth.debian.org>
+Maintainer: Randall Donald <rdonald@debian.org>
+XS-Vcs-Svn: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers
+XS-Vcs-Browser: http://svn.debian.org/wsvn/pkg-nvidia/packages/nvidia-graphics-drivers
 Build-Depends: debhelper (>> 4.0.0), sed (>> 3.0)
 Standards-Version: 3.6.2
 
 
 Package: nvidia-glx-ia32
 Architecture: amd64
-Depends: nvidia-kernel-1.0.8776, ia32-libs, ${shlibs:Depends}
-Suggests: nvidia-settings, nvidia-kernel-source (>= 1.0.8776)
+Depends: nvidia-kernel-100.14.19, ia32-libs, ${shlibs:Depends}
+Suggests: nvidia-settings, nvidia-kernel-source (>= 100.14.19)
 Conflicts: nvidia-glx-src
 Replaces: nvidia-glx-src
 Description: NVIDIA binary XFree86 4.x driver
@@ -17,48 +19,116 @@ Description: NVIDIA binary XFree86 4.x driver
  OpenGL applications via a direct-rendering X Server. AGP, TV-out and
  flat panel displays are also supported.
  .
- Cards NOT supported by this driver are
- .
- TNT, TNT2, Vanta, GeForce 256, GeForce DDR,
- Quadro, GeForce2 Pro, GeForce2 GTS, 
- GeForce2 Ultra, GeForce2 Ti, Quadro2 Pro
- .
+ The following GPU's are supported:
+ GeForce 6800 Ultra, GeForce 6800, GeForce 6800 XE, GeForce 6800 XT
+ GeForce 6800 GT, GeForce 6800 GS, Quadro FX 4000, GeForce 7800 GTX
+ GeForce 7800 GT, GeForce 7800 GS, GeForce Go 7800, GeForce Go 7800 GTX
+ Quadro FX 4500, GeForce 6800, GeForce 6800 LE, GeForce Go 6800, 
+ GeForce Go 6800 Ultra, Quadro FX Go1400, Quadro FX 3450/4000 SDI
+ Quadro FX 1400, GeForce 6600 GT, GeForce 6600, GeForce 6200
+ GeForce 6600 LE, Quadro FX 3400/4400, GeForce PCX 5750, GeForce PCX 5900
+ GeForce PCX 5300/Quadro FX 330, Quadro NVS 280 PCI-E/Quadro FX 330
+ Quadro FX 1300, GeForce PCX 4300, GeForce 6600 VE, GeForce Go 6600
+ GeForce 6610 XL, GeForce Go 6600 TE/6200 TE, GeForce 6700 XL, 
+ GeForce Go 6600 GT, Quadro NVS 440, Quadro FX 550, Quadro FX 540,
+ GeForce 6500, GeForce 6200 TurboCache(TM), GeForce 6200 LE, GeForce Go 6200
+ Quadro NVS 285, GeForce Go 6400, GeForce 8800 GTX, GeForce 8800 GTS
+ Quadro FX 5600, Quadro FX 4600, GeForce 7300 LE, GeForce 7300 SE
+ Quadro NVS 110M/GeForce Go 7300, GeForce Go 7400, Quadro NVS 110M
+ Quadro NVS 120M, Quadro FX 350M, Quadro FX 350, GeForce 7300 GS
+ GeForce 6150, GeForce 6150 LE, GeForce 6100, GeForce Go 6100, 
+ GeForce 7900 GTX, GeForce 7900 GT/GTO, GeForce 7900 GS, GeForce 7950 GX2
+ GeForce Go 7900 GS, GeForce Go 7900 GTX, Quadro FX 2500M, Quadro FX 1500M
+ Quadro FX 5500, Quadro FX 3500, Quadro FX 1500, Quadro FX 4500 X2, 
+ GeForce 7600 GS, GeForce FX 5800 Ultra, GeForce FX 5800, Quadro FX 2000
+ Quadro FX 1000, GeForce FX 5600 Ultra, GeForce FX 5600, GeForce FX 5600XT
+ GeForce FX Go5600, GeForce FX Go5650, Quadro FX Go700, GeForce FX 5200
+ GeForce FX 5200 Ultra, GeForce FX 5200, GeForce FX 5200LE, GeForce FX Go5200
+ GeForce FX Go5250, GeForce FX 5500, GeForce FX 5100, GeForce FX Go5200 32M/64M
+ Quadro NVS 55/280 PCI, Quadro FX 500/FX 600, GeForce FX Go53xx, 
+ GeForce FX Go5100, GeForce FX 5900 Ultra, GeForce FX 5900, GeForce FX 5900XT
+ GeForce FX 5950 Ultra, GeForce FX 5900ZT, Quadro FX 3000, Quadro FX 700
+ GeForce FX 5700 Ultra, GeForce FX 5700, GeForce FX 5700LE, GeForce FX 5700VE
+ GeForce FX Go5700, Quadro FX Go1000, Quadro FX 1100, GeForce 7600 GT, 
+ GeForce 7600 GS, GeForce 7300 GT, GeForce Go 7600, Quadro FX 560,
+ GeForce 7050 PV / NVIDIA nForce 630a, GeForce 7025 / NVIDIA nForce 630a,
+ GeForce 8600 GTS, GeForce 8600 GT, GeForce 8600M GT, GeForce 8600M GS,
+ GeForce 8500 GT, GeForce 8400 GS, GeForce 8400M GT, GeForce 8400M GS,
+ GeForce 8400M G, GeForce 8300 GS, Quadro FX 1600M, Quadro FX 570M,
+ Quadro FX 360M, Quadro NVS 320M, Quadro NVS 140M, Quadro NVS 135M,
+ Quadro NVS 130M
+ . 
  See /usr/share/doc/nvidia-glx/README.txt.gz for a complete list 
- of supported GPUs.
+ of supported GPUs and PCIIDs
  .
  Please see the nvidia-kernel-source package for building the kernel module
  required by this package.
 
 Package: nvidia-glx
 Architecture: i386 amd64
-Depends: nvidia-kernel-1.0.8776, x11-common (>= 1:7.0.0), ${shlibs:Depends}
-Suggests: nvidia-settings, nvidia-kernel-source (>= 1.0.8776)
+Depends: nvidia-kernel-100.14.19, x11-common (>= 1:7.0.0), ${shlibs:Depends}
+Suggests: nvidia-settings, nvidia-kernel-source (>= 100.14.19)
 Conflicts: nvidia-glx-src, nvidia-glx-dev (<< 1.0.8774-5)
 Provides: xserver-xorg-video-1.0
 Replaces: nvidia-glx-src
-Description: NVIDIA binary XFree86 4.x driver
- These XFree86 4.0 / Xorg binary drivers provide optimized hardware 
+Description: NVIDIA binary Xorg driver
+ These binary drivers provide optimized hardware 
  acceleration of  OpenGL applications via a direct-rendering X Server. 
  AGP, PCIe, SLI, TV-out and flat panel displays are also supported.
  .
- Cards NOT supported by this driver are
- .
- TNT, TNT2, Vanta, GeForce 256, GeForce DDR,
- Quadro, GeForce2 Pro, GeForce2 GTS, 
- GeForce2 Ultra, GeForce2 Ti, Quadro2 Pro
- .
+ The following GPU's are supported:
+ GeForce 6800 Ultra, GeForce 6800, GeForce 6800 XE, GeForce 6800 XT
+ GeForce 6800 GT, GeForce 6800 GS, Quadro FX 4000, GeForce 7800 GTX
+ GeForce 7800 GT, GeForce 7800 GS, GeForce Go 7800, GeForce Go 7800 GTX
+ Quadro FX 4500, GeForce 6800, GeForce 6800 LE, GeForce Go 6800, 
+ GeForce Go 6800 Ultra, Quadro FX Go1400, Quadro FX 3450/4000 SDI
+ Quadro FX 1400, GeForce 6600 GT, GeForce 6600, GeForce 6200
+ GeForce 6600 LE, Quadro FX 3400/4400, GeForce PCX 5750, GeForce PCX 5900
+ GeForce PCX 5300/Quadro FX 330, Quadro NVS 280 PCI-E/Quadro FX 330
+ Quadro FX 1300, GeForce PCX 4300, GeForce 6600 VE, GeForce Go 6600
+ GeForce 6610 XL, GeForce Go 6600 TE/6200 TE, GeForce 6700 XL, 
+ GeForce Go 6600 GT, Quadro NVS 440, Quadro FX 550, Quadro FX 540,
+ GeForce 6500, GeForce 6200 TurboCache(TM), GeForce 6200 LE, GeForce Go 6200
+ Quadro NVS 285, GeForce Go 6400, GeForce 8800 GTX, GeForce 8800 GTS
+ Quadro FX 5600, Quadro FX 4600, GeForce 7300 LE, GeForce 7300 SE
+ Quadro NVS 110M/GeForce Go 7300, GeForce Go 7400, Quadro NVS 110M
+ Quadro NVS 120M, Quadro FX 350M, Quadro FX 350, GeForce 7300 GS
+ GeForce 6150, GeForce 6150 LE, GeForce 6100, GeForce Go 6100, 
+ GeForce 7900 GTX, GeForce 7900 GT/GTO, GeForce 7900 GS, GeForce 7950 GX2
+ GeForce Go 7900 GS, GeForce Go 7900 GTX, Quadro FX 2500M, Quadro FX 1500M
+ Quadro FX 5500, Quadro FX 3500, Quadro FX 1500, Quadro FX 4500 X2, 
+ GeForce 7600 GS, GeForce FX 5800 Ultra, GeForce FX 5800, Quadro FX 2000
+ Quadro FX 1000, GeForce FX 5600 Ultra, GeForce FX 5600, GeForce FX 5600XT
+ GeForce FX Go5600, GeForce FX Go5650, Quadro FX Go700, GeForce FX 5200
+ GeForce FX 5200 Ultra, GeForce FX 5200, GeForce FX 5200LE, GeForce FX Go5200
+ GeForce FX Go5250, GeForce FX 5500, GeForce FX 5100, GeForce FX Go5200 32M/64M
+ Quadro NVS 55/280 PCI, Quadro FX 500/FX 600, GeForce FX Go53xx, 
+ GeForce FX Go5100, GeForce FX 5900 Ultra, GeForce FX 5900, GeForce FX 5900XT
+ GeForce FX 5950 Ultra, GeForce FX 5900ZT, Quadro FX 3000, Quadro FX 700
+ GeForce FX 5700 Ultra, GeForce FX 5700, GeForce FX 5700LE, GeForce FX 5700VE
+ GeForce FX Go5700, Quadro FX Go1000, Quadro FX 1100, GeForce 7600 GT, 
+ GeForce 7600 GS, GeForce 7300 GT, GeForce Go 7600, Quadro FX 560, 
+ GeForce 7050 PV / NVIDIA nForce 630a, GeForce 7025 / NVIDIA nForce 630a,
+ GeForce 8600 GTS, GeForce 8600 GT, GeForce 8600M GT, GeForce 8600M GS,
+ GeForce 8500 GT, GeForce 8400 GS, GeForce 8400M GT, GeForce 8400M GS,
+ GeForce 8400M G, GeForce 8300 GS, Quadro FX 1600M, Quadro FX 570M,
+ Quadro FX 360M, Quadro NVS 320M, Quadro NVS 140M, Quadro NVS 135M,
+ Quadro NVS 130M
+ . 
  See /usr/share/doc/nvidia-glx/README.txt.gz for a complete list 
- of supported GPUs.
+ of supported GPUs and PCIIDs
  .
-  
+ Please see the nvidia-kernel-source package for building the kernel module
+ required by this package. This will provide nvidia-kernel-<version>
+ 
 Package: nvidia-glx-dev
 Architecture: i386 amd64
-Depends: nvidia-glx (>= 1.0.8776)
+Depends: nvidia-glx (>= 100.14.19)
 Provides: libgl-dev
-Conflicts: nvidia-glx (>= 1.0.8777), libgl-dev, mesa-common-dev
+Conflicts: nvidia-glx (>= 100.14.20), libgl-dev, mesa-common-dev
 Replaces: libgl-dev
-Description: NVIDIA binary XFree86 4.x / Xorg driver development files
- This package contains the NVIDIA binary XFree86 4.x and Xorg driver
+Description: NVIDIA binary Xorg driver development files
+ This package contains the NVIDIA binary Xorg driver
  development files.
  .
  For more information on this source package visit NVIDIA's homepage
@@ -67,23 +137,14 @@ Description: NVIDIA binary XFree86 4.x / Xorg driver development files
 Package: nvidia-kernel-source
 Architecture: i386 amd64
 Depends: debhelper (>> 4.0.0), make, sed (>> 3.0), dpatch (>= 2.0.0)
-Recommends: nvidia-glx (>= 1.0.8776), kernel-package (>= 8.082), devscripts
+Recommends: nvidia-glx (>= 100.14.19), kernel-package (>= 8.082), devscripts
 Conflicts: nvidia-kernel-src
 Replaces: nvidia-kernel-src
 Description: NVIDIA binary kernel module source
- This package builds the NVIDIA XFree86 4.x / Xorg  binary kernel module 
+ This package builds the NVIDIA Xorg  binary kernel module 
  needed  by nvidia-glx. The drivers provide optimized hardware acceleration 
  of OpenGL applications via a direct-rendering X Server AGP,
  PCIe, SLI, TV-out, and flat panel displays are also supported.
- .
- Cards NOT supported by this driver are
- .
- TNT, TNT2, Vanta, GeForce 256, GeForce DDR,
- Quadro, GeForce2 Pro, GeForce2 GTS, 
- GeForce2 Ultra, GeForce2 Ti, Quadro2 Pro
- .
- See /usr/share/doc/nvidia-kernel-source/README.txt.gz for a complete list 
- of supported GPUs.
  .
  PLEASE read /usr/share/doc/nvidia-kernel-source/README.Debian for building
  information.
