fix perms and root cmd
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@352 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -92,8 +92,8 @@ build-kernel-stamp:
 	    # build kernel module source tarball
 	    mkdir -p $(CURDIR)/debian/temp/modules/nvidia-kernel/debian
 	    mkdir -p $(CURDIR)/debian/temp/modules/nvidia-kernel/nv
-	    cp -r $(CURDIR)/debian.binary/* $(CURDIR)/debian/temp/modules/nvidia-kernel/debian
-	    
+	    cp -a $(CURDIR)/debian.binary/* $(CURDIR)/debian/temp/modules/nvidia-kernel/debian
+	       
 	    for f in `ls $(CURDIR)/debian.binary` ; do \
 		perl -p \
 		-e 's{#BASE_VERSION#}{$(base_version)}g;' \
@@ -109,6 +109,7 @@ build-kernel-stamp:
 	    cp $(CURDIR)/$(dirname_x86_64)/usr/src/nv/nv-kernel.o $(CURDIR)/debian/temp/modules/nvidia-kernel/nv-kernel.o.x86_64 || true
 	    chmod 755 $(CURDIR)/debian/temp/modules/nvidia-kernel/debian/rules
 	    chown -R root:src $(CURDIR)/debian/temp/modules
+	    chmod 755 $(CURDIR)/debian/temp/modules/nvidia-kernel/debian/patches.old
 	    tar -jcvf $(CURDIR)/nvidia-kernel.tar.bz2 -C $(CURDIR)/debian/temp modules
 	    rm -rf debian/temp 
 	    touch build-kernel-stamp
