--- a/debian.binary/rules
+++ b/debian.binary/rules
@@ -8,6 +8,10 @@
 # This is the debhelper compatability version to use.
 export DH_COMPAT=4
 
+ifeq ($(shell id -u),0)
+     ROOT_CMD=
+endif
+	
 
 
 dirname=nv
@@ -286,8 +290,8 @@ kdist_configure:
 .PHONY: kdist_image
 kdist_image:
 	    echo "ROOT_CMD = $(ROOT_CMD)"
-	    $(MAKE) $(MFLAGS) -f debian/rules binary_modules
-	    $(MAKE) $(MFLAGS) -f debian/rules clean
+	    $(ROOT_CMD) $(MAKE) $(MFLAGS) -f debian/rules binary_modules
+	    $(ROOT_CMD) $(MAKE) $(MFLAGS) -f debian/rules clean
  
 
 
@@ -299,7 +303,7 @@ kdist_clean:
 	     $(MAKE) $(MFLAGS) -f debian/rules clean
 
 kdist: 
-	$(MAKE) $(MFLAGS) -f debian/rules binary_modules
+	$(ROOT_CMD) $(MAKE) $(MFLAGS) -f debian/rules binary_modules
 	# Build a .changes file.
 	dpkg-genchanges -b -e"$(KMAINT) <$(KEMAIL)>" -u"$(CURDIR)/../.." > $(CHFILE)
 	debsign -e"$(KMAINT) <$(KEMAIL)>" $(CHFILE)
