include CUDA files
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@366 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -152,6 +152,11 @@ install: build-stamp build-kernel-stamp
 	install -m 0644 $(dirname)/usr/include/GL/glext.h \
 		$(CURDIR)/debian/nvidia-glx-dev/usr/include/GL
 
+	install -m 0644 $(dirname)/usr/include/cuda/cuda.h \
+		$(CURDIR)/debian/nvidia-glx-dev/usr/include/cuda
+	install -m 0644 $(dirname)/usr/include/cuda/cudaGL.h \
+		$(CURDIR)/debian/nvidia-glx-dev/usr/include/cuda
+
 	install -m 0644 $(dirname)/usr/include/GL/glx.h \
 		$(CURDIR)/debian/nvidia-glx-dev/usr/include/GL
 	install -m 0644 $(dirname)/usr/include/GL/glxext.h \
@@ -161,6 +166,8 @@ install: build-stamp build-kernel-stamp
 			$(CURDIR)/debian/nvidia-glx/usr/lib
 	install -m 0644 $(dirname)/usr/lib/libGLcore.so.${version} \
 		$(CURDIR)/debian/nvidia-glx/usr/lib
+	install -m 0644 $(dirname)/usr/lib/libcuda.so.${version} \
+			$(CURDIR)/debian/nvidia-glx/usr/lib
 	sed "s/__GENERATED_BY__/Debian nvidia-graphics-drivers/" $(dirname)/usr/lib/libGL.la | sed "s/__LIBGL_PATH__/\/usr\/lib/" > $(CURDIR)/debian/nvidia-glx-dev/usr/lib/libGL.la
 	# install -m 0644 $(dirname)/usr/lib/libGL.la $(CURDIR)/debian/nvidia-glx/usr/lib/libGL.la
 
@@ -189,6 +196,8 @@ install: build-stamp build-kernel-stamp
 		install $(dirname)/usr/lib32/libGLcore.so.${version} \
 			$(CURDIR)/debian/nvidia-glx-ia32/emul/ia32-linux/usr/lib ; \
 		install $(dirname)/usr/lib32/libGL.so.${version} \
+			$(CURDIR)/debian/nvidia-glx-ia32/emul/ia32-linux/usr/lib ; \
+		install $(dirname)/usr/lib32/libcuda.so.${version} \
 			$(CURDIR)/debian/nvidia-glx-ia32/emul/ia32-linux/usr/lib ; \
 		install $(dirname)/usr/lib32/libnvidia-tls.so.${version} \
 			$(CURDIR)/debian/nvidia-glx-ia32/emul/ia32-linux/usr/lib ; \
