--- a/debian/rules
+++ b/debian/rules
@@ -91,7 +91,7 @@ build-kernel-stamp:
 
 	    # build kernel module source tarball
 	    mkdir -p $(CURDIR)/debian/temp/modules/nvidia-kernel/debian
-	    mkdir -p $(CURDIR)/debian/temp/modules/nvidia-kernel/nv
+	    
 	    cp -a $(CURDIR)/debian.binary/* $(CURDIR)/debian/temp/modules/nvidia-kernel/debian
 	       
 	    for f in `ls $(CURDIR)/debian.binary` ; do \
@@ -105,12 +105,13 @@ build-kernel-stamp:
 		chmod 0644 $(CURDIR)/debian/temp/modules/nvidia-kernel/debian/$$f ; \
 	    done
 #	    chmod 755 $(CURDIR)/debian/temp/modules/nvidia-kernel/debian/patches	    
-	    cp $(CURDIR)/$(dirname)/usr/src/nv/* $(CURDIR)/debian/temp/modules/nvidia-kernel/nv || true
+	    cp $(CURDIR)/$(dirname)/usr/src/nv/* $(CURDIR)/debian/temp/modules/nvidia-kernel/ || true
 #not yet	    cp $(CURDIR)/Makefile $(CURDIR)/debian/temp/modules/nvidia-kernel/ || true
 	    cp $(CURDIR)/$(dirname_x86_64)/usr/src/nv/nv-kernel.o $(CURDIR)/debian/temp/modules/nvidia-kernel/nv-kernel.o.x86_64 || true
+	    cp $(CURDIR)/debian/temp/modules/nvidia-kernel/Makefile.kbuild $(CURDIR)/debian/temp/modules/nvidia-kernel/Makefile
 	    chmod 755 $(CURDIR)/debian/temp/modules/nvidia-kernel/debian/rules
 	    chown -R root:src $(CURDIR)/debian/temp/modules
-	    chmod 755 $(CURDIR)/debian/temp/modules/nvidia-kernel/debian/patches.old
+	    
 	    tar -jcvf $(CURDIR)/nvidia-kernel.tar.bz2 -C $(CURDIR)/debian/temp modules
 	    rm -rf debian/temp 
 	    touch build-kernel-stamp
