add xen patch from Len
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@384 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian.binary/rules
+++ b/debian.binary/rules
@@ -144,7 +144,9 @@ unpatch:
 	if [ -e patch-stamp ]; then \
 	   dpatch deapply-all ; \
 	   rm -rf patch-stamp debian/patched ; \
-	fi   
+	fi
+	patch -R debian/patches/xen.patch
+	
 	   
 
 # The kdist_configure target is called by make-kpkg modules_config. It
