add LSB headers to nvidia-glx init
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@400 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-glx.init.in
+++ b/debian/nvidia-glx.init.in
@@ -1,6 +1,23 @@
 #!/bin/sh
 
+### BEGIN INIT INFO
+# Provides:          nvidia-glx
+# Required-Start:    $remote_fs
+# Required-Stop:     $remote_fs
+# Default-Start:     2 3 4 5
+# Default-Stop:      
+# Short-Description: adjust nVidia TLS libraries
+# Description:       adjust nVidia TLS libraries
+### END INIT INFO
+
+
+
 PATH=/sbin:/usr/sbin:/usr/local/sbin:/bin:/usr/bin:/usr/local/bin
+# Load the VERBOSE setting and other rcS variables
+. /lib/init/vars.sh
+
+# Define LSB log_* functions.
+. /lib/lsb/init-functions
 
 
 # to force usage or non-usage of TLS libs edit /etc/defaults/nvidia-glx
