prepare for tagging
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@490 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/rules
+++ b/debian/rules
@@ -64,9 +64,9 @@ configure-stamp: version-clean $(AUTOGEN)
 		pwd; \
 		ls -al; \
 		cd $(dirname)/usr/src/nv; \
-		for i in $(CURDIR)/patches/*; \
-			do patch -p3 <$$i; \
-		done; \
+#		for i in $(CURDIR)/patches/*; \
+#			do patch -p3 <$$i; \
+#		done; \
 	fi
 
 	sed 's/^nvidia-graphics-drivers/nvidia-kernel/g'  debian/changelog > debian.binary/changelog
