--- a/debian/rules
+++ b/debian/rules
@@ -92,8 +92,8 @@ build-kernel-stamp:
 	    # build kernel module source tarball
 	    mkdir -p $(CURDIR)/debian/temp/modules/nvidia-kernel/debian
 	    
+		# Prepare debian files for module package
 	    cp -a $(CURDIR)/debian.binary/* $(CURDIR)/debian/temp/modules/nvidia-kernel/debian
-	       
 	    for f in `ls $(CURDIR)/debian.binary` ; do \
 		perl -p \
 		-e 's{#BASE_VERSION#}{$(base_version)}g;' \
@@ -104,11 +104,24 @@ build-kernel-stamp:
 		< $(CURDIR)/debian.binary/$$f >		$(CURDIR)/debian/temp/modules/nvidia-kernel/debian/$$f ; \
 		chmod 0644 $(CURDIR)/debian/temp/modules/nvidia-kernel/debian/$$f ; \
 	    done
+
 #	    chmod 775 $(CURDIR)/debian/temp/modules/nvidia-kernel/debian/patches
-	    cp $(CURDIR)/$(dirname)/usr/src/nv/* $(CURDIR)/debian/temp/modules/nvidia-kernel/ || true
-#not yet	    cp $(CURDIR)/Makefile $(CURDIR)/debian/temp/modules/nvidia-kernel/ || true
-	    cp $(CURDIR)/$(dirname_x86_64)/usr/src/nv/nv-kernel.o $(CURDIR)/debian/temp/modules/nvidia-kernel/nv-kernel.o.x86_64 || true
-	    cp $(CURDIR)/debian/temp/modules/nvidia-kernel/Makefile.kbuild $(CURDIR)/debian/temp/modules/nvidia-kernel/Makefile
+	    cp $(CURDIR)/$(dirname)/usr/src/nv/* $(CURDIR)/debian/temp/modules/nvidia-kernel/
+
+		# We don't want these makefiles that don't work with kbuild
+		rm $(CURDIR)/debian/temp/modules/nvidia-kernel/makefile
+
+		# We want both 32 and 64 bit versions of nv-kernel.o
+	    cp $(CURDIR)/$(dirname_x86_64)/usr/src/nv/nv-kernel.o $(CURDIR)/debian/temp/modules/nvidia-kernel/nv-kernel.o.x86_64
+		mv $(CURDIR)/debian/temp/modules/nvidia-kernel/nv-kernel.o $(CURDIR)/debian/temp/modules/nvidia-kernel/nv-kernel.o.i386
+
+		# and then make Makefile.kbuild actually use our names
+		sed -i -e 's/nv-kernel.o$$/nv-kernel.o$$(NVARCH)/' $(CURDIR)/debian/temp/modules/nvidia-kernel/Makefile.kbuild
+
+		# We have new conftest files that work purely with kbuild and doesn't require root
+	    cp $(CURDIR)/Makefile $(CURDIR)/conftest.* $(CURDIR)/debian/temp/modules/nvidia-kernel/
+
+		# Fix permissions
 	    chmod 755 $(CURDIR)/debian/temp/modules/nvidia-kernel/debian/rules
 	    chown -R root:src $(CURDIR)/debian/temp/modules
 	    
