add binary_modules target
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@547 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian.binary/rules
+++ b/debian.binary/rules
@@ -80,7 +80,7 @@ unpatch:
 	   rm -rf patch-stamp debian/patched ; \
 	fi
 
-	
+binary_modules: binary-modules	
 	   
 
 # The kdist_configure target is called by make-kpkg modules_config. It
