fix dh_clean spaz
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@549 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian.binary/rules
+++ b/debian.binary/rules
@@ -94,6 +94,6 @@ kdist_config kdist_configure:
 # other kdist_commands (except for the .deb files created).
 kdist_clean: 
 	$(MAKE) -C . LINUXDIR=$(KSRC) KVERREL=$(KVERS) clean
-	dh_clean
+	-dh_clean
 
 .PHONY: clean binary-modules
