--- a/debian/control.in
+++ b/debian/control.in
@@ -61,6 +61,37 @@ Description: NVIDIA binary Xorg driver development files
  For more information on this source package visit NVIDIA's homepage
  at http://www.nvidia.com/ .
 
+Package: nvidia-libvdpau-ia32
+Architecture: amd64
+Depends: ia32-libs, ${shlibs:Depends}
+Suggests: nvidia-settings, nvidia-kernel-source (>= #VERSION#)
+Replaces: nvidia-glx-ia32 (< 180.51)
+Conflicts: nvidia-glx-ia32 (< 180.51)
+Description: NVIDIA vdpau 32bit libraries
+ These libraries provide the Video Decode and Presentation API for Unix
+ (32 bit). They provide accelerated video playback (incl. H.264) for the 
+ supported graphics cards. See /usr/share/doc/nvidia-libvdpau/README.txt.gz 
+ for more information.
+
+Package: nvidia-libvdpau
+Architecture: i386 amd64
+Depends: x11-common (>= 1:7.0.0), ${shlibs:Depends}
+Replaces: nvidia-glx (< 180.51)
+Conflicts: nvidia-glx (< 180.51)
+Description: NVIDIA vdpau libraries
+ These libraries provide the Video Decode and Presentation API for Unix.
+ They provide accelerated video playback (incl. H.264) for the supported 
+ graphics cards. See /usr/share/doc/nvidia-libvdpau/README.txt.gz for 
+ more information.
+ 
+Package: nvidia-libvdpau-dev
+Architecture: i386 amd64
+Depends: nvidia-libvdpau (>= #VERSION#)
+Replaces: nvidia-glx-dev (< 180.51)
+Conflicts: nvidia-glx-dev (< 180.51), nvidia-libvdpau (>= #NEXTVER#)
+Description: NVIDIA vdpau development files
+ This package contains the NVIDIA vdpau development files.
+
 Package: nvidia-kernel-source
 Architecture: i386 amd64
 Depends: debhelper (>> 4.0.0), make, sed (>> 3.0), dpatch (>= 2.0.0)
