--- a/debian/rules
+++ b/debian/rules
@@ -29,7 +29,9 @@ dirname_x86_64:=$(shell sh debian/upstream_info DIRNAME_X86_64)
 
 AUTOGEN=debian/nvidia-kernel-source.README.Debian debian/control \
 debian/copyright debian/nvidia-glx.links debian/nvidia-glx-dev.links \
+debian/nvidia-libvdpau.links debian/nvidia-libvdpau-ia32.links \
 debian/nvidia-glx.override debian/nvidia-glx.docs debian/nvidia-glx.examples \
+debian/nvidia-libvdpau.docs \
 debian/nvidia-glx.postrm debian/nvidia-glx.init \
 debian/nvidia-glx-ia32.override debian/nvidia-glx-ia32.links \
 debian/nvidia-kernel-source.docs debian/nvidia-glx-dev.preinst
@@ -120,6 +122,7 @@ build-kernel-stamp:
 
 		# We have new conftest files that work purely with kbuild and doesn't require root
 	    cp $(CURDIR)/Makefile $(CURDIR)/conftest.* $(CURDIR)/debian/temp/modules/nvidia-kernel/
+	    cp $(CURDIR)/patches.h $(CURDIR)/debian/temp/modules/nvidia-kernel/
 
 		# Fix permissions
 	    chmod 755 $(CURDIR)/debian/temp/modules/nvidia-kernel/debian/rules
@@ -172,9 +175,9 @@ install: build-stamp build-kernel-stamp
 		$(CURDIR)/debian/nvidia-glx-dev/usr/include/cuda
 
 	install -m 0644 $(dirname)/usr/include/vdpau/vdpau.h \
-		$(CURDIR)/debian/nvidia-glx-dev/usr/include/vdpau
+		$(CURDIR)/debian/nvidia-libvdpau-dev/usr/include/vdpau
 	install -m 0644 $(dirname)/usr/include/vdpau/vdpau_x11.h \
-		$(CURDIR)/debian/nvidia-glx-dev/usr/include/vdpau
+		$(CURDIR)/debian/nvidia-libvdpau-dev/usr/include/vdpau
 
 	install -m 0644 $(dirname)/usr/include/GL/glx.h \
 		$(CURDIR)/debian/nvidia-glx-dev/usr/include/GL
@@ -188,11 +191,11 @@ install: build-stamp build-kernel-stamp
 	install -m 0644 $(dirname)/usr/lib/libcuda.so.${version} \
 			$(CURDIR)/debian/nvidia-glx/usr/lib
 	install -m 0644 $(dirname)/usr/lib/libvdpau_nvidia.so.${version} \
-			$(CURDIR)/debian/nvidia-glx/usr/lib
+			$(CURDIR)/debian/nvidia-libvdpau/usr/lib
 	install -m 0644 $(dirname)/usr/lib/libvdpau.so.${version} \
-			$(CURDIR)/debian/nvidia-glx/usr/lib
+			$(CURDIR)/debian/nvidia-libvdpau/usr/lib
 	install -m 0644 $(dirname)/usr/lib/libvdpau_trace.so.${version} \
-			$(CURDIR)/debian/nvidia-glx/usr/lib
+			$(CURDIR)/debian/nvidia-libvdpau/usr/lib
 			
 
 
@@ -231,11 +234,11 @@ install: build-stamp build-kernel-stamp
 		install $(dirname)/usr/lib32/libcuda.so.${version} \
 			$(CURDIR)/debian/nvidia-glx-ia32/emul/ia32-linux/usr/lib ; \
 		install $(dirname)/usr/lib32/libvdpau.so.${version} \
-			$(CURDIR)/debian/nvidia-glx-ia32/emul/ia32-linux/usr/lib ; \
+			$(CURDIR)/debian/nvidia-libvdpau-ia32/emul/ia32-linux/usr/lib ; \
 		install $(dirname)/usr/lib32/libvdpau_nvidia.so.${version} \
-			$(CURDIR)/debian/nvidia-glx-ia32/emul/ia32-linux/usr/lib ; \
+			$(CURDIR)/debian/nvidia-libvdpau-ia32/emul/ia32-linux/usr/lib ; \
 		install $(dirname)/usr/lib32/libvdpau_trace.so.${version} \
-			$(CURDIR)/debian/nvidia-glx-ia32/emul/ia32-linux/usr/lib ; \
+			$(CURDIR)/debian/nvidia-libvdpau-ia32/emul/ia32-linux/usr/lib ; \
 		install $(dirname)/usr/lib32/libnvidia-tls.so.${version} \
 			$(CURDIR)/debian/nvidia-glx-ia32/emul/ia32-linux/usr/lib ; \
 		install $(dirname)/usr/lib32/tls/libnvidia-tls.so.${version} \
@@ -284,7 +287,7 @@ binary-common:
 #	dh_python
 	dh_makeshlibs
 	dh_installdeb
-	dh_shlibdeps  -Xia32 -Xtls -l$(CURDIR)/debian/nvidia-glx/usr/lib
+	dh_shlibdeps  -Xia32 -Xtls -l$(CURDIR)/debian/nvidia-glx/usr/lib:$(CURDIR)/debian/nvidia-libvdpau/usr/lib
 	# quickhack! remove me :-/
 	perl -pi.bak -e 's/,\s+nvidia-glx-ia32//;' $(CURDIR)/debian/nvidia-glx.substvars
 	dh_gencontrol -s
